pelo js, foi criada a funçào para que o usuário possa enviar mensagem. Função com prompt para pegar o nome de usuário e conferir com os nomes do servidos. Começo da função e carregar mensagem

--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
     <img src="./imagens/logo 1.png"/>
 </header>
 <main class = "conteudo">mensagens</main>
-<footer class = "banner"></footer>
+<footer class = "banner">
+    <input type = "text" id="mensagem">
+    <input type = "submit" value = "Submit" onclick = "enviarMensagem()">
+</footer>
 
 
 
     </div>
     <!-- incluir javascript e api -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src = "./js.js"></script>
-    <script src = 'https://mock-api.driven.com.br/api/v4/uol/'></script>
 </body>
 </html>
