Agora pelo menos as mensagens estão carregando - uma vez só - de forma correta. O layout ainda não está correto, mas as mensagens estão sendo recolhidas do servidor

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 <header class = "banner">
     <img src="./imagens/logo 1.png"/>
 </header>
-<main class = "conteudo">mensagens</main>
+<main class = "conteudo">
+
+
+
+
+
+</main>
 <footer class = "banner">
     <input type = "text" id="mensagem">
     <input type = "submit" value = "Submit" onclick = "enviarMensagem()">
