--- a/index.html
+++ b/index.html
@@ -22,18 +22,23 @@
 <main class = "conteudo">
 
 
-
+    <ion-icon name="paper-plane-outline"></ion-icon> 
 
 
 </main>
 <footer class = "banner">
     <input type = "text" id="mensagem">
-    <input type = "submit" value = "Submit" onclick = "enviarMensagem()">
+    <div type = "submit" 
+    onclick = "enviarMensagem()" ><ion-icon name='paper-plane-outline'></ion-icon></div>
+    
+
 </footer>
 
 
 
     </div>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!-- incluir javascript e api -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
