--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </ul>
             
             <ul><span>Escolha a visibilidade</span>
-                <li>Público</li>
-                <li>Privado</li>
+                <li><div><ion-icon name="lock-open"></ion-icon>Público</div></li>
+                <li><div><ion-icon name="lock-closed"></ion-icon>Reservadamente</div></li>
             </ul>
         </div>
 <header class = "banner">
